--- a/app/globals.css
+++ b/app/globals.css
@@ -24,3 +24,9 @@ body {
   color: var(--foreground);
   font-family: Arial, Helvetica, sans-serif;
 }
+
+@layer components {
+  .primary-btn {
+    @apply bg-pink-500 text-white font-bold py-2 px-4 rounded-full;
+  }
+}
